# s7-reaper

./: .gitignore  dev-log.org  dev.org  meson.build  readme.org
doc/: idea-scratch.org  ns-doc.md  reaper-plugin-notes.org
lib/: meson.build
src/: IPlugReaperExtension.cpp  ReaperRepl.cpp  ReaperRepl.h  bindings.cpp  bindings.h  config.h  meson.build
src/aod/: path.cpp  path.hpp
src/resources/: main.rc  meson.build
src/s7_reaper/: bindings.cpp  bindings.hpp  gui.cpp  gui.hpp  path.cpp  path.hpp
src/scheme/: .gitignore  gen-doc.scm  gui1.scm  gui2.scm  init.scm  s7bi  secrets-example.scm
src/scheme/arrange/: core.scm
src/scheme/freesound/: core.scm
src/scheme/midi/: core.scm  scales.scm
src/scheme/region-items/: core.scm  gui.scm
src/scheme/rpr/: common.scm  gen.scm  item.scm  macros.scm  midi.scm  time.scm  tracks.scm
src/scheme/rpr+/: freesound.scm
src/scheme/rpr/actions/: gen.scm  item.scm  sws-item.scm  sws-track.scm  time_selection.scm  track.scm
src/scheme/rpr/helpers/: item.scm  track.scm
src/scheme/stochastic/: core.scm
subprojects/: iPlug2.wrap  imgui.wrap  s7.wrap  s7_imgui.wrap  sdl2.wrap
test/: demo-regions.rpp
